# 2.00.03 (48196) Jan 24, 2011
1/24/11 Publishing for internal review
isotopes-and-atomic-mass: improved the look of the disabled part of the periodic table
isotopes-and-atomic-mass: Created 2nd tab, put a temporary sketch on the tab.
isotopes-and-atomic-mass: Made the non-interactive portion of the periodic table contain simple squares instead of disabled buttons.
isotopes-and-atomic-mass: Made the neutron bucket a bit larger and added more neutrons in an attempt to make it more noticeable.
isotopes-and-atomic-mass: added isotope name under the symbol node, and internationalized
isotopes-and-atomic-mass: Increased the font size for element names in the symbol node in isotopes sim
isotopes-and-atomic-mass: Hide the charge indicator node in the isotopes sim
centered the text in symbol nodes
improved layout and tolerance for displaying values in AbundanceIndicator
Internationalized AbundanceIndicator
Improved AbundanceIndicator to say that C14 has a "very small" amount instead of 0
Added white background for AbundanceIndicator
Added trace amount of Carbon-14 to the isotope table.
Added title for 2nd tab of Isotopes sim.
# 2.00.02 (47929) Jan 13, 2011
1/13/11 Deploying to dev to correct an issue with launching of Isotopes.
# 2.00.01 (47918) Jan 12, 2011
1/12/11 Publishing to dev for review of some UI components
Added the scale for Isotopes.
Converted the periodic table to use buttons.
Added animation developer control to Isotopes.
Changed the title for the first tab of Isotopes.
Added the bulk for functionality for the first tab of Isotopes and Atomic Mass.
# 2.00.00 (47377) Dec 22, 2010
12/22/10 Redeploy of version 2.0 due to deployment issues.
12/22/10 Redeploying in order to capture screen shot, should still be version 2.0.
12/22/10 >Added the "Game" tab.
12/22/10 Changed the string "Charge" to "Net Charge".
12/21/10 replace incomplete "Reset All" node with ResetAllButtonNode
# 1.00.18 (47184) Dec 15, 2010